# croner

./: Cargo.toml  config.croner  readme.md  spec.md
.github/workflows/: release.yml
images/: readme_with_installers.md
installers/: install.ps1  install.sh
src/: cli_colors.rs  lib.rs  loader.rs  main.rs  models.rs  parser.rs  printer.rs  scheduler.rs  shell.rs  spec.md
tests/: cli_colors_tests.rs  loader_tests.rs  parser_tests.rs  scheduler_tests.rs  shell_tests.rs
